# ChangeLog for media-video/2mandvd
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*2mandvd-0.9.7 (01 Sep 2009)

  01 Sep 2009; Dror Levin <spatz@psybear.com> -2mandvd-0.8.8.ebuild,
  -2mandvd-0.9.ebuild, -2mandvd-0.9.3.ebuild, +2mandvd-0.9.7.ebuild:
  Bump version, add translations, install README.txt, minor cleanups. Drop
  old versions.

*2mandvd-0.9.3 (16 Aug 2009)

  16 Aug 2009; Markos Chandras <hwoarang@gentoo.org> +2mandvd-0.9.3.ebuild:
  Version bump

*2mandvd-0.9 (04 Aug 2009)

  04 Aug 2009; Markos Chandras <hwoarang@gentoo.org> +2mandvd-0.9.ebuild:
  Version bump

  18 Jul 2009; Alex Alexander <wired@gentoo.org> 2mandvd-0.8.8.ebuild:
  updated available translations

  09 Jun 2009; Markos Chandras <hwoarang@gentoo.org> 2mandvd-0.8.8.ebuild:
  Drop src_configure

*2mandvd-0.8.8 (01 Jun 2009)

  01 Jun 2009; Markos Chandras <hwoarang@gentoo.org> -2mandvd-0.8.7.ebuild,
  +2mandvd-0.8.8.ebuild:
  Version bump

*2mandvd-0.8.7 (31 May 2009)

  31 May 2009; Markos Chandras <hwoarang@gentoo.org> -2mandvd-0.8.6.ebuild,
  +2mandvd-0.8.7.ebuild:
  Version bump, remove old

*2mandvd-0.8.6 (30 May 2009)

  30 May 2009; Markos Chandras <hwoarang@gentoo.org> -2mandvd-0.8.5.ebuild,
  +2mandvd-0.8.6.ebuild:
  Version bump, remove old. Upstream still fails to write a proper
  installation
  rule

*2mandvd-0.8.5 (05 May 2009)

  05 May 2009; Markos Chandras <hwoarang@gentoo.org> -2mandvd-0.8.4.ebuild,
  +2mandvd-0.8.5.ebuild:
  Version bump,remove old

*2mandvd-0.8.4 (02 May 2009)

  02 May 2009; Markos Chandras <hwoarang@gentoo.org> -2mandvd-0.8.3.ebuild,
  +2mandvd-0.8.4.ebuild:
  Version bump, remove old

*2mandvd-0.8.3 (29 Apr 2009)

  29 Apr 2009; Markos Chandras <hwoarang@gentoo.org> -2mandvd-0.8.1.ebuild,
  +2mandvd-0.8.3.ebuild:
  Version bump, remove old

*2mandvd-0.8.1 (25 Apr 2009)

  25 Apr 2009; Markos Chandras <hwoarang@gentoo.org> -2mandvd-0.8.0.ebuild,
  +2mandvd-0.8.1.ebuild:
  Version bump, remove old
