@@ -1,4 +1,6 @@
 DIST 2ManDVD-0.9.7.tar.gz 30577680 RMD160 bdb2965bd45f82695ea2273e0f936c3403615808 SHA1 748f0a4e5739f8eb508e13553b8063a7a8cb8e05 SHA256 ca4728e0d536a5e0cd7a17404cc2ae03a0e82150ad95c2e01b5a415ed381aa9d
+DIST 2ManDVD-1.0.tar.gz 31957806 RMD160 240a2d6e5673d62173e24da62b2b40f1fcd5b90e SHA1 c78bc056712b20a5feffe93a7a16bde9114e02a7 SHA256 cf7943e181d5c3d79a47ffa6ea28310f6777ee7c48233e0af684dfb4e085d1b7
 EBUILD 2mandvd-0.9.7.ebuild 1470 RMD160 4d0cf1b78cb28363408639001107faa9af4283e0 SHA1 823b0705ce1f478fdebf5e151c822a3a025195f6 SHA256 6c3582c9cf3105fcc3d3a49b8c130b8b6a11a5f1bf82d240275290014ea77b21
-MISC ChangeLog 2131 RMD160 f54f856bff5e3ce30c09716796f726cb2a0146f5 SHA1 d80f72efd05eacc1d9e80468af5998b334872dba SHA256 f43863663e33ff3e3d9910632d8a4b5424012812f9a279e0dfd2c2e681a516ad
+EBUILD 2mandvd-1.0.ebuild 1470 RMD160 4d0cf1b78cb28363408639001107faa9af4283e0 SHA1 823b0705ce1f478fdebf5e151c822a3a025195f6 SHA256 6c3582c9cf3105fcc3d3a49b8c130b8b6a11a5f1bf82d240275290014ea77b21
+MISC ChangeLog 2249 RMD160 284b6a1a806c2eef85dac3c33d9925b430a7eb8b SHA1 81a7087771e8b53d950de72a2a5089379850baa9 SHA256 f480741be35e33d67bd0aa87183fad311f6c1377ed1ae1ea768f6249a3f35f9d
 MISC metadata.xml 294 RMD160 ac4e1baa0a1839ae0a807a9d4b915134788d6aa1 SHA1 82865de14486cb30dc9ebfe6f1aecc9c86c0075b SHA256 209af586ae032f00659b69da17d4186854660be14b244d31aa0bea2005c2c5ba
